<resources>
    <string name="app_name">activetechproject</string>

    <string name="text1"> Sign Up</string>
    <string name="edit1">Full Name </string>
    <string name="edit2"> Register</string>
    <string name="edit3"> Email Address</string>
    <string name="edit4"> Password</string>
    <string name="text2"> Register</string>
    <string name="text3"> Log In</string>
    <string name="edit5"> Email Address</string>
    <string name="edit6"> Password</string>
    <string name="edit7"> Forgot Password?</string>
    <string name="text4"> Login</string>
    <string name="text5"> If you do not have an account, Register now!</string>
    <string name="text6">Home </string>
    <string name="text7"> Network</string>
    <string name="text8"> Explore</string>
    <string name="text9"> Events:</string>
    <string name="edit8"> Search events...</string>
    <string name="text0">No results found </string>
    <string name="text11">Welcome to Tech World</string>
    <string name="text12">Choose your learning journey today</string>
    <string name="back_button_description">this is back button </string>
    <string name="text13"> RESET PASSWORD</string>
    <string name="text14">Please enter your email  to reset  password</string>
    <string name="text15">Email</string>
    <string name="text16">RESET PASSWORD</string>
    <string name="text17">Interested in Event</string>
    <string name="text18">Location</string>
    <string name="text19">choose the community</string>
    <!-- Other strings -->
    <string-array name="organization_list">
        <item>Organizations</item>
        <item>Cyberhub</item>
        <item>Dal</item>
        <item>Tuwaiq Academy</item>
        <item>Saudi Digital Academy</item>
        <item>Wadi Makkah Investment Company</item>
        <item>Royal Commission for Jubail abd Yanbu</item>
        <item>Saudi Authority for Auditors and Accountants</item>
        <item>Ministry of Communications and Information Technology</item>
        <item>Digital Attaa</item>
        <item>Expenditure efficiency forum</item>
    </string-array>


</resources>