<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/forgotPasswordImage"
        android:layout_width="291dp"
        android:layout_height="259dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_4" />
    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text13"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="#365C7A"
        />
    <TextView
        android:id="@+id/passwordDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text14"
        android:textSize="18dp"
        android:textStyle="normal"
        android:textColor="#365C7A"
        />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/text15"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text16"
        android:background="#4670AF"
        android:onClick="resetPassword"
        android:textColor="@color/white"/>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:layout_gravity="left"
        android:src="@drawable/back" />


</LinearLayout>