<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="167dp"
        android:layout_height="108dp"
        android:src="@drawable/img_3"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="40sp"
        android:textColor="#4670AF"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="serif"
        />
    <EditText
        android:id="@+id/FullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/edit1"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit3"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit4"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <Button
        android:id="@+id/Register"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/edit2"
        android:onClick="registerDB"
        android:textSize="26sp"
        android:textColor="#FDFAFA"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        android:layout_gravity="center"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:layout_margin="16dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        android:layout_gravity="end|left" />
</LinearLayout>