<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text9"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_search_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/edit8"
        android:minHeight="48dp"
        android:padding="8dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text0"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_events"
        android:layout_width="390dp"
        android:layout_height="502dp"
        android:layout_below="@id/et_search_event"
        android:layout_marginTop="10dp" />


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_below="@+id/recycler_view_events"
        android:layout_margin="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>