<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_above="@id/bottom_navigation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text11"
            android:textColor="#F70F3962"
            android:layout_marginTop="10dp"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text12"
            android:textColor="#F82C4A6D"
            android:textSize="15sp"
            android:textStyle="normal" />

        <ImageButton
            android:id="@+id/exploreButton"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/explore"
            android:contentDescription="@string/text8"
            android:layout_marginTop="15dp"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Explore"
            android:textColor="#F70F3962"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/networkButton"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/community"
            android:contentDescription="@string/text7"
            android:layout_marginTop="15dp"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Network"
            android:textColor="#F70F3962"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:gravity="center" />

<!--        <ImageButton-->
<!--            android:id="@+id/profileButton"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:background="@drawable/profile1"-->
<!--            android:contentDescription="@string/text18"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:scaleType="centerCrop" />-->
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>
